<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- General -->
    <string name="app_name">Oneplus 5</string>
    <string name="advanced_settings">OnePlus Settings</string>
    <string name="advanced_settings_summary">Custom settings for your device</string>

    <!-- Alert slider settings -->
    <string name="buttons_dashboard_summary">Alert Slider</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_vibration">Vibration</string>
    <string name="notification_slider_mode_none">All</string>

    <!-- Notification slider -->
    <string name="notification_slider_usage_title">Use slider for</string>
    <string name="notification_slider_for_notification">Notification</string>
    <string name="notification_slider_for_flashlight">Flashlight</string>
    <string name="notification_slider_for_brightness">Brightness</string>
    <string name="notification_slider_for_rotation">Rotation</string>
    <string name="notification_slider_for_ringer">Ringer</string>
    <string name="notification_slider_for_notification_ringer">Notification and ringer</string>

    <string name="notification_slider_flashlight_off">Off</string>
    <string name="notification_slider_flashlight_on">On</string>
    <string name="notification_slider_flashlight_blink">Blink</string>

    <string name="notification_slider_brightness_auto">Auto</string>
    <string name="notification_slider_brightness_brightest">Brightest</string>
    <string name="notification_slider_brightness_darkest">Darkest</string>

    <string name="notification_slider_rotation_auto">Auto</string>
    <string name="notification_slider_rotation_portrait">Portrait</string>
    <string name="notification_slider_rotation_landscape_90">Landscape (90°)</string>
    <string name="notification_slider_rotation_landscape_270">Landscape (270°)</string>

    <string name="notification_slider_ringer_normal">Normal</string>
    <string name="notification_slider_ringer_vibrate">Vibrate</string>
    <string name="notification_slider_ringer_silent">Silent</string>

    <!-- Graphics -->
    <string name="graphics_title">Graphics</string>
    <string name="oneplus_mode_summary"></string>
    <string name="oneplus_mode_title">OnePlus</string>
    <string name="srgb_mode_summary"></string>
    <string name="srgb_mode_title">sRGB</string>
    <string name="hbm_mode_summary"></string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="dci_mode_summary"></string>
    <string name="dci_mode_title">DCI_P3</string>
    <string name="night_mode_summary"></string>
    <string name="night_mode_title">Night</string>
    <string name="adaptive_mode_summary"></string>
    <string name="adaptive_mode_title">Adaptive</string>
    <string name="panel_category_title">Panel modes</string>
    <string name="panel_category_summary">Modes for panel color correction</string>
    <string name="off_mode_title">Off</string>
    <string name="tile_panel_mode">Panel modes</string>
    <string name="tile_hbm_mode">High brightness modes</string>

    <!-- Doze -->
    <string name="doze_category_title">Ambient display</string>
    <string name="doze_category_summary">Wake screen when you receive notifications</string>
    <string name="wave_check_summary">Pulse notifications on hand wave</string>
    <string name="wave_check_title">Hand wave</string>
    <string name="tilt_check_summary">Pulse notifications when device is picked up</string>
    <string name="tilt_check_title">Pick up</string>
    <string name="pocket_check_summary">Pulse notifications on removal from pocket</string>
    <string name="pocket_check_title">Pocket</string>
    <string name="ambient_display_enable">Ambient display must be enabled in display settings</string>

    <!-- Gestures and actions -->
    <string name="choose_app">Choose app</string>
    <string name="category_double_swipe_gesture">II gesture</string>
    <string name="offscreen_gesture_title">Offscreen gestures</string>
    <string name="category_circle_gesture">O gesture</string>
    <string name="category_down_arrow_gesture">V gesture</string>
    <string name="category_up_arrow_gesture">A gesture</string>
    <string name="category_left_arrow_gesture">&lt; gesture</string>
    <string name="category_right_arrow_gesture">&gt; gesture</string>
    <string name="category_gestures_summary">Configure gesture actions</string>
    <string name="torch_entry">Flashlight</string>
    <string name="disabled_entry">Disabled</string>
    <string name="camera_entry">Camera</string>
    <string name="music_play_entry">Play / pause music</string>
    <string name="music_prev_entry">Prev track</string>
    <string name="music_next_entry">Next track</string>
    <string name="volume_up">Raise volume</string>
    <string name="volume_down">Lower volume</string>
    <string name="browse_scroll_up">Scroll up</string>
    <string name="browse_scroll_down">Scroll down</string>
    <string name="navigate_back">Back</string>
    <string name="navigate_home">Home</string>
    <string name="navigate_recent">Recent</string>
    <string name="not_ready_summary">Resolving...</string>
    <string name="resolve_failed_summary">Resolving app failed</string>
    <string name="category_down_swipe_gesture">Down swipe</string>
    <string name="category_up_swipe_gesture">Up swipe</string>
    <string name="category_left_swipe_gesture">Left swipe</string>
    <string name="category_right_swipe_gesture">Right swipe</string>
    <string name="category_fp_down_swipe_gesture">Fingerprint down swipe</string>
    <string name="category_fp_up_swipe_gesture">Fingerprint up swipe</string>
    <string name="category_fp_right_swipe_gesture">Fingerprint right swipe</string>
    <string name="category_fp_left_swipe_gesture">Fingerprint left swipe</string>
    <string name="category_fp_long_press_gesture">Fingerprint long press</string>
    <string name="fp_swipe_down_switch_summary_head">Default fingerprint notification swipe down gesture</string>
    <string name="fp_swipe_down_switch_title_head">Fingerprint swipe down gesture</string>
    <string name="wake_entry">Wakeup</string>
    <string name="category_gestures_title">Device gestures</string>
    <string name="fp_gesture_title">Fingerprint scanner gestures</string>
    <string name="proxi_summary_head">Check proximity sensor for handling gesture and fingerprint sensor</string>
    <string name="proxi_title_head">Proximity check</string>
    <string name="off_screen_gesture_feedback_summary_head">Enable haptic feedback for gestures</string>
    <string name="off_screen_gesture_feedback_title_head">Haptic feedback</string>
</resources>
